--- a/mod/modules/app/app/globals.css
+++ b/mod/modules/app/app/globals.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
 @tailwind base;
-@tailwind blocks;
+@tailwind components;
 @tailwind utilities;
 
 :root {
@@ -19,6 +19,13 @@ body {
 * {
   font-family: var(--retro-font) !important;
   box-sizing: border-box;
+}
+
+svg {
+  max-width: 100%;
+  max-height: 100%;
+  display: inline-block;
+  flex-shrink: 0;
 }
 
 @keyframes blink {
